Fix text overflow for multiple lines text

--- a/style.css
+++ b/style.css
@@ -151,8 +151,9 @@ input[type="search"] {
 }
 
 .card>.card-text {
-    height: 200px;
+    height: 150px;
     margin-bottom: 20px;
+
 }
 
 .card>.card-text>p:first-child {
@@ -164,9 +165,15 @@ input[type="search"] {
     font-size: 0.8rem;
     margin-bottom: 10px;
     color: var(--grey-color);
+    /* fix text-overflow */
+    display: -webkit-box;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .card>.card-icons {
+    margin-top: auto;
     justify-self: end;
 }
 
